--- a/package.json
+++ b/package.json
@@ -9,14 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.11.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
-    "next": "13.0.7",
+    "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
+    "next": "^12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-hook-form": "^7.40.0",
+    "react-redux": "^8.0.5",
+    "rxjs": "^7.6.0",
+    "sweetalert2": "^11.6.15",
+    "typescript": "4.9.4",
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
+    "@types/validator": "^13.7.10"
   }
 }
