--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
     "rxjs": "^7.6.0",
+    "sass": "^1.57.1",
     "sweetalert2": "^11.6.15",
     "typescript": "4.9.4",
     "validator": "^13.7.0",
